# rusty_spine

./: .gitignore  Cargo.toml  README.md  changelog.md  index.html  readme.md  spine.js
.github/workflows/: ci.yml
assets/dragon/export/: dragon-ess.json
ci/: Cargo.toml
ci/src/: main.rs  utils.rs
docs/: safety.md
examples/: bevy.rs  c.rs  miniquad.rs  simple.rs
spineboy/: spineboy-pro.json
src/: animation.rs  animation_state.rs  animation_state_data.rs  atlas.rs  attachment.rs  attachment_loader.rs  bone.rs  bounding_box_attachment.rs  c_interface.rs  clipping_attachment.rs  color.rs  controller.rs  doctests.rs  error.rs  event.rs  extension.rs  ik_constraint.rs  ik_constraint_data.rs  lib.rs  mesh_attachment.rs  path_attachment.rs  path_constraint.rs  path_constraint_data.rs  physics.rs  physics_constraint.rs  physics_constraint_data.rs  point_attachment.rs  prelude.rs  region_attachment.rs  renderer_object.rs  skeleton.rs  skeleton_binary.rs  skeleton_clipping.rs  skeleton_controller.rs  skeleton_data.rs  skeleton_json.rs  skin.rs  slot.rs  sync_ptr.rs  test.rs  (+5 more)
src/c/: libc.rs  mod.rs  spine_c.rs  spine_c_3.8.rs  spine_c_4.1.rs  wasm.rs
src/debugger/: egui.rs  mod.rs
src/draw/: combined.rs  mod.rs  simple.rs
src/v38/: animation.rs  animation_state.rs  animation_state_data.rs  atlas.rs  attachment.rs  attachment_loader.rs  bone.rs  bounding_box_attachment.rs  c_interface.rs  clipping_attachment.rs  color.rs  controller.rs  error.rs  event.rs  extension.rs  ik_constraint.rs  ik_constraint_data.rs  mesh_attachment.rs  path_attachment.rs  path_constraint.rs  path_constraint_data.rs  point_attachment.rs  region_attachment.rs  renderer_object.rs  skeleton.rs  skeleton_binary.rs  skeleton_clipping.rs  skeleton_data.rs  skeleton_json.rs  skin.rs  slot.rs  test.rs  transform_constraint.rs  transform_constraint_data.rs
src/v38/c/: spine_c.rs  wasm.rs
src/v38/draw/: combined.rs  (+1 more)
src/v42/: animation.rs  animation_state.rs  animation_state_data.rs  atlas.rs  attachment.rs  attachment_loader.rs  bone.rs  bounding_box_attachment.rs  c_interface.rs  clipping_attachment.rs  color.rs  controller.rs  event.rs  extension.rs  ik_constraint.rs  ik_constraint_data.rs  mesh_attachment.rs  mod.rs  path_attachment.rs  path_constraint.rs  path_constraint_data.rs  physics.rs  physics_constraint.rs  physics_constraint_data.rs  point_attachment.rs  region_attachment.rs  renderer_object.rs  skeleton.rs  skeleton_binary.rs  skeleton_clipping.rs  skeleton_data.rs  skeleton_json.rs  skin.rs  slot.rs  test.rs  texture_region.rs  transform_constraint.rs  transform_constraint_data.rs
transpiler/: .dockerignore  Cargo.toml  Dockerfile  readme.md
transpiler/src/: dockerize.rs  lib.rs  main.rs  transpile.rs
(+4 files in other folders)
