[package]
name = "rusty_spine"
version = "0.3.1"
edition = "2021"
description = "Spine runtime for Rust (and wasm!) transpiled from the official C Runtime."
homepage = "https://github.com/jabuwu/rusty_spine"
repository = "https://github.com/jabuwu/rusty_spine"
readme = "readme.md"
license-file = "LICENSE"
exclude = [
    "assets/*",
]

[dependencies]
libc = { version = "0.2", optional = true }
egui = { version = "0.19", optional = true }
egui_extras = { version = "0.19", optional = true }
mint = { version = "0.5", optional = true }

[dev-dependencies]
miniquad = "0.3.16"
image = { version = "0.24", default-features = false, features = [ "png", "webp", "jpeg" ] }
glam = { version = "0.21", features = [ "mint" ] }
cosmic-text = "0.9"
transpiler = { path = "./transpiler" }

[profile.dev.package."*"]
opt-level = 3

[features]
default = [ "draw_functions", "mint" ]
use_libc = [ "libc" ]
draw_functions = []
egui_debugger = [ "egui", "egui_extras" ]
