[package]
name = "rusty_spine"
version = "0.8.0"
edition = "2021"
description = "Spine runtime for Rust (and wasm!) transpiled from the official C Runtime."
homepage = "https://github.com/jabuwu/rusty_spine"
repository = "https://github.com/jabuwu/rusty_spine"
readme = "README.md"
license-file = "LICENSE"
exclude = [
    "/.github",
    "/assets",
    "/ci",
    "/examples",
]

[dependencies]
libc = { version = "0.2", optional = true }
mint = { version = "0.5", optional = true }

[dev-dependencies]
egui-miniquad = "0.16.0"
egui = "0.31"
glam = "0.23"
image = { version = "0.25", default-features = false, features = [ "png", "webp", "jpeg" ] }
miniquad = "0.4.8"

[profile.dev.package."*"]
opt-level = 3

[features]
default = [ "draw_functions", "mint" ]
draw_functions = []

[workspace]
resolver = "2"
members = [
    "transpiler",
    "ci"
]
